--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     'defusedxml>=0.7.1',
     'packaging>=22.0',  # bumping to minimum version required by black
     'requests>=2.28',
-    'urllib3~=1.26.8',
+    'urllib3>=1.26.8,<3',
 ]
 requires-python = ">=3.7"
 classifiers = [
